[metadata]
name = contrastive-vi
version = 0.0.1

[options]
packages =
    contrastive_vi
python_requires =
    >=3.9
install_requires =
    scikit-misc
    scanpy>=1.8.1
    scvi-tools==0.14.1
    rpy2==3.4.5

[options.extras_require]
dev =
    pre-commit==2.15.0
    toml==0.10.2
    pytest==6.2.5
    jupyterlab==3.2.0
